@@ -20,7 +20,7 @@ jobs:
         name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.12"
       -
         name: Install flake8
         run: |
@@ -46,7 +46,7 @@ jobs:
         shell: bash -el {0}
     strategy:
       matrix:
-        python-version: [ "3.7", "3.8", "3.9", "3.10" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
 
     steps:
       -
@@ -106,14 +106,14 @@ jobs:
         name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.12"
       -
         name: Install miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
           miniconda-version: latest
           environment-file: conda_environment.yml
-          python-version: "3.9"
+          python-version: "3.12"
       -
         name: Install se-t-ece from source
         run: |
