@@ -1,7 +1,7 @@
 channels:
     - conda-forge
 dependencies:
-    - python>=3.7
+    - python>=3.8
     - pip
     - iris>=3.1,!=3.2.0,!=3.2.0.post0
     - cartopy>=0.20
